--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
-CreateSymLink1C/err_*.txt
-CreateSymLink1C/log_*.txt
-CreateSymLink1C/Res_*.txt
+/build
+err_*.txt
+log_*.txt
+Res_*.txt
+UpdMod_logg*.txt
